<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constrainLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="30sp"
    android:foregroundGravity="top|center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/TextEnter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:autoSizeMaxTextSize="30sp"
        android:autoSizeMinTextSize="10sp"
        android:autoSizeTextType="none"
        android:background="@drawable/line_text"
        android:fontFamily="@font/montserat"
        android:gravity="start"
        android:text="@string/nameSign"
        android:textAlignment="gravity"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/InputLayoutName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textEnter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15sp"
        android:layout_marginTop="45sp"
        android:layout_marginBottom="45sp"
        android:autoSizeMaxTextSize="30sp"
        android:autoSizeMinTextSize="10sp"
        android:autoSizeTextType="none"
        android:fontFamily="@font/montserat"
        android:gravity="center_horizontal"
        android:text="@string/priceStr"
        android:textAlignment="gravity"
        android:textColor="@color/mainColor"
        android:textSize="11sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/InputLayoutName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textEnter4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="320sp"
        android:layout_marginTop="5sp"
        android:layout_marginEnd="5sp"
        android:layout_marginBottom="45sp"
        android:autoSizeMaxTextSize="30sp"
        android:autoSizeMinTextSize="10sp"
        android:autoSizeTextType="none"
        android:fontFamily="@font/montserat"
        android:gravity="center_horizontal"
        android:text="@string/City"
        android:textAlignment="gravity"
        android:textColor="#888686"
        android:textSize="11sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/InputLayoutName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mainTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15sp"
        android:layout_marginTop="170sp"
        android:fontFamily="@font/montserat"
        android:gravity="center"
        android:text="@string/data_reg"
        android:textColor="#000000"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textEnter2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15sp"
        android:layout_marginTop="85sp"
        android:autoSizeMaxTextSize="30sp"
        android:autoSizeMinTextSize="10sp"
        android:autoSizeTextType="none"
        android:fontFamily="@font/montserat"
        android:gravity="center_horizontal"
        android:paddingBottom="30sp"
        android:text="@string/opisan_usl"
        android:textAlignment="gravity"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/InputLayoutName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="250sp"
        android:layout_marginTop="155sp"
        android:layout_marginEnd="10sp"
        android:layout_marginBottom="5sp"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/montserat"
        android:text="@string/cancelStr"
        android:textColor="#FFFFFF" />


</androidx.cardview.widget.CardView>